<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="EAs_3400" Id="{be490947-6071-4325-92e1-dbd110f28fb2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'linkalways'} 
VAR_GLOBAL
	// NCI Grupppe verlinken ***************************************************************************************************************************************
    //_______________________________________________________
	
	{attribute 'TcLinkTo':='TINC^NC-Task 1 SAF^NCI_3400^Outputs^ToPlc'}	
	e_NCI_Channel				AT %I*: NCTOPLC_NCICHANNEL_REF;	// Schnittstellen Struktur zwischen NCI<->SPS
	
	{attribute 'TcLinkTo':='TINC^NC-Task 1 SAF^NCI_3400^Inputs^FromPlc'}
	a_NCI_Channel			 	AT %Q*: PLCTONC_NCICHANNEL_REF;	// Schnittstellen Struktur zwischen NCI<->SPS


	// Servoregler *************************************************************************************************************************************************

	{attribute 'TcNcAxis':='=3400+FS2-11M1 (X-Achse)'}	
	ea_X_Achse					: Axis_ref;				// Schnittstellen Struktur zwischen NC<->SPS
	
	{attribute 'TcNcAxis':='=3400+FS2-12M1 (Y-Achse)'}	
	ea_Y_Achse					: Axis_ref;				// Schnittstellen Struktur zwischen NC<->SPS

    // Umrichter
    //_______________________________________________________
	
	 {attribute 'TcLinkTo' := '	.PD_1_STATUSWORT  		:= TIID^Device 1 (EtherCAT)^=3400+FS2-16T1 (Bohraggr Schlüsselloch oben)^Module 1 (Standard 16 PD)^Inputs 16 PD^PI 1;
								.PD_2_IST_DREHZAHL  	:= TIID^Device 1 (EtherCAT)^=3400+FS2-16T1 (Bohraggr Schlüsselloch oben)^Module 1 (Standard 16 PD)^Inputs 16 PD^PI 2;
								.PD_3_Status  			:= TIID^Device 1 (EtherCAT)^=3400+FS2-16T1 (Bohraggr Schlüsselloch oben)^Module 1 (Standard 16 PD)^Inputs 16 PD^PI 3;
								.PD_4_IST_DREHMOMENT  	:= TIID^Device 1 (EtherCAT)^=3400+FS2-16T1 (Bohraggr Schlüsselloch oben)^Module 1 (Standard 16 PD)^Inputs 16 PD^PI 4;
								.PD_5_IST_STROM  		:= TIID^Device 1 (EtherCAT)^=3400+FS2-16T1 (Bohraggr Schlüsselloch oben)^Module 1 (Standard 16 PD)^Inputs 16 PD^PI 5'}		
		e_Bohraggr_Schluessel_ob	AT%I*	: DUT_SEW_FU_PD_IN; 	// Schnittstelle zwischen SPS und FU
	 {attribute 'TcLinkTo' := '	.PD_1_Steuerwort  		:= TIID^Device 1 (EtherCAT)^=3400+FS2-16T1 (Bohraggr Schlüsselloch oben)^Module 1 (Standard 16 PD)^Outputs 16 PD^PO 1;
								.PD_2_Solldrehzahl  	:= TIID^Device 1 (EtherCAT)^=3400+FS2-16T1 (Bohraggr Schlüsselloch oben)^Module 1 (Standard 16 PD)^Outputs 16 PD^PO 2;
								.PD_3_Sollbeschleunigung:= TIID^Device 1 (EtherCAT)^=3400+FS2-16T1 (Bohraggr Schlüsselloch oben)^Module 1 (Standard 16 PD)^Outputs 16 PD^PO 3;
								.PD_4_Sollverzoegerung  := TIID^Device 1 (EtherCAT)^=3400+FS2-16T1 (Bohraggr Schlüsselloch oben)^Module 1 (Standard 16 PD)^Outputs 16 PD^PO 4;
								.PD_5_Digitalausgaenge  := TIID^Device 1 (EtherCAT)^=3400+FS2-16T1 (Bohraggr Schlüsselloch oben)^Module 1 (Standard 16 PD)^Outputs 16 PD^PO 5'}
		a_Bohraggr_Schluessel_ob	AT%Q*	: DUT_SEW_FU_PD_OUT;	// Schnittstelle zwischen SPS und FU


    // Eingaenge
    //_______________________________________________________

    // +FS1-3K5

        {attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^+FS1-3K1 (BK1120)^+FS1-3K5 (EL1809)^Channel 12^Input'}
        e_FR_3400_Bohraggregat_7_Schluesselloch_oben_Stillstandserkennung_Motor_steht AT %I* : BOOL; (* =FR.3400 Bohraggregat 7 (Schlüsselloch oben) Stillstandserkennung Motor steht *)

    // +K110-1K2

        {attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^+K110-1K1 (BK1120)^+K110-1K2 (EL1809)^Channel 14^Input'}
        e_FR_3400_Druecker_Schluesselloch_oben_Bohraggregat_7_Bohrhub_ist_oben AT %I* : BOOL; (* =FR.3400 Drücker/Schlüsselloch oben Bohraggregat 7 Bohrhub ist oben *)

        {attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^+K110-1K1 (BK1120)^+K110-1K2 (EL1809)^Channel 15^Input'}
        e_FR_3400_Druecker_Schluesselloch_oben_Bohraggregat_7_Bohrhub_ist_unten AT %I* : BOOL; (* =FR.3400 Drücker/Schlüsselloch oben Bohraggregat 7 Bohrhub ist unten *)


    // Ausgaenge
    //_______________________________________________________

    // +K110-2K1

        {attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^+K110-1K1 (BK1120)^+K110-2K1 (EL2809)^Channel 15^Output'}
        a_FR_3400_Druecker_Schluesselloch_oben_Bohraggregat_7_Bohrhub_heben AT %Q* : BOOL; (* =FR.3400 Drücker/Schlüsselloch oben Bohraggregat 7 Bohrhub heben *)

        {attribute 'TcLinkTo' := 'TIID^Device 1 (EtherCAT)^+K110-1K1 (BK1120)^+K110-2K1 (EL2809)^Channel 16^Output'}
        a_FR_3400_Druecker_Schluesselloch_oben_Bohraggregat_7_Bohrhub_senken AT %Q* : BOOL; (* =FR.3400 Drücker/Schlüsselloch oben Bohraggregat 7 Bohrhub senken *)
END_VAR
    ]]></Declaration>
  </GVL>
</TcPlcObject>