<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_Visu_3400" Id="{fc2e6609-5687-4232-b00b-75740eb561ae}">
    <Declaration><![CDATA[
VAR_GLOBAL
    KommAnVisu                 : INT;      (* Kommunikation an die Visualisierung *)
    KommVonVisu                : INT;      (* Kommunikation von der Visualisierung *)
    belegt                     : BOOL;     (* true = erzeugt Dummyteil, false = keine Auswirkungen (nur Handauflage) *)
    daten_gebucht              : BOOL;
    SteuerStatus               : DUT_Visu_SteuerStatus;

    // Frequenzumrichter
	Bohraggr_Schluessel_ob		: DUT_SEW_FU_Visu; 		//#Tab: 3400 Bohraggregat #Name: Bohraggregat Schlüsselkasten oben 

    // Servoregler
	X_Achse						: DUT_Achse_Service;	//#Tab: 3400 Bohraggregat #Name: X-Achse 
	Y_Achse						: DUT_Achse_Service;	//#Tab: 3400 Bohraggregat #Name: Y-Achse 

    // Ventile
	 Schluessel_ob_Bohrhub      : DUT_Ventil_VISU;      //#Tab: 3400 Bohraggregat #Name: Schlüsselkasten oben Bohrhub 

END_VAR

VAR_GLOBAL PERSISTENT
    Schrittnummer              : INT;
    //Kopfdaten                : DUT_Kopfdaten;
    //Kopfdaten_default        : DUT_Kopfdaten;
    //Jobdaten                 : DUT_Jobdaten;
    //Jobdaten_default         : DUT_Jobdaten;

    //para_Vorlage             : REAL := 0.0; //#Typ: VParam #Tab:  #Name:  #Einheit:mm #Min: 1 #Max: 100 #Format:F1
END_VAR
    ]]></Declaration>
  </GVL>
</TcPlcObject>